# ai-coding-agent

./: README.md
ai_coding_agent/: .gitignore  README.md  pyproject.toml  requirements.txt
ai_coding_agent/examples/: README.md
ai_coding_agent/examples/langchain/: basic_usage.py  custom_agent.py  mcp_server_usage.py
ai_coding_agent/examples/mcp/: README.md  ai_coding_agent_tools.postman_collection.json  client_example.py  list_directory_example.py  mcp_sse_client.py  server_example.py
ai_coding_agent/src/ai_coding_agent/: __init__.py
ai_coding_agent/src/ai_coding_agent/core/: __init__.py  base.py  code_modification.py  control_tools.py  file_system.py  lsp_tools.py  web.py
ai_coding_agent/src/ai_coding_agent/core/code_modification/: __init__.py  propose_code.py  view_code.py  view_file.py
ai_coding_agent/src/ai_coding_agent/core/control/: __init__.py  clear_actions.py  get_next_action.py  push_action.py  show_actions.py
ai_coding_agent/src/ai_coding_agent/core/file_system/: __init__.py  delete_file.py  edit_file.py  (+4 more)
ai_coding_agent/src/ai_coding_agent/interfaces/: __init__.py  langchain.py  mcp.py
ai_coding_agent/src/ai_coding_agent/tools/: __init__.py
ai_coding_agent/src/core/: code_modification.py  file_system.py  memory.py  web.py
ai_coding_agent/src/interfaces/: langchain.py
ai_coding_agent/tests/: conftest.py
ai_coding_agent/tests/tools/: conftest.py  test_codebase_search.py  test_delete_file.py  test_edit_file.py  test_file_search.py  test_grep_search.py  test_list_dir.py  test_read_file.py  test_run_terminal_cmd.py  test_view_file.py
(+7 files in other folders)
