[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "AI Coding Agent Toolset with LLM and MCP Server interfaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.9.3",
    "tiktoken>=0.5.0",
    "typing-extensions>=4.0.0",
    "pygls>=1.3.1",
    "agno==1.5.10",
    "fastmcp==2.7.0",
    "sseclient==0.0.27",
    "langchain-ollama==0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "pylint>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_coding_agent"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true 
